--- a/doc-src/sample.conf.in
+++ b/doc-src/sample.conf.in
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id$
+# $Id: sample.conf.in,v 1.2 2004/02/23 02:46:18 topia Exp $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 #
