* add COMMON_CONFDIR define.

--- a/.tiarrarc
+++ b/.tiarrarc
@@ -6,3 +6,4 @@ PERL=${PERL:-/usr/opt/bin/perl}
 PERLARG=${PERLARG:--wt}
 TIARRAARG="${TIARRAARG} '-D@@TOPDIR@@=${TOPDIR}'"
 TIARRAARG="${TIARRAARG} '-D@@COMMONDIR@@=${TOPDIR}/common'"
+TIARRAARG="${TIARRAARG} '-D@@COMMON_CONFDIR@@=${TOPDIR}/common/conf'"
