--- a/.tiarrarc
+++ b/.tiarrarc
@@ -4,6 +4,6 @@
 
 PERL=${PERL:-/usr/opt/bin/perl}
 PERLARG=${PERLARG:--wt}
-TIARRAARG="${TIARRAARG} '-D@@TOPDIR@@=${TOPDIR}'"
-TIARRAARG="${TIARRAARG} '-D@@COMMONDIR@@=${TOPDIR}/common'"
-TIARRAARG="${TIARRAARG} '-D@@COMMON_CONFDIR@@=${TOPDIR}/common/conf'"
+TIARRAARG="${TIARRAARG} '-D__TOP_DIR__=${TOPDIR}'"
+TIARRAARG="${TIARRAARG} '-D__COMMON_DIR__=${TOPDIR}/common'"
+TIARRAARG="${TIARRAARG} '-D__COMMON_CONFDIR__=${TOPDIR}/common/conf'"
