* add --debug globally.

--- a/.tiarrarc
+++ b/.tiarrarc
@@ -7,3 +7,4 @@ PERLARG=${PERLARG:--wt}
 TIARRAARG="${TIARRAARG} '-D__TOP_DIR__=${TOPDIR}'"
 TIARRAARG="${TIARRAARG} '-D__COMMON_DIR__=${TOPDIR}/common'"
 TIARRAARG="${TIARRAARG} '-D__COMMON_CONFDIR__=${TOPDIR}/common/conf'"
+TIARRAARG="${TIARRAARG} --debug"
