* new configuration file: all.conf.   - get rid of non-essential modules to all.conf.

--- a/doc-src/all.conf.in
+++ b/doc-src/all.conf.in
@@ -3,47 +3,8 @@
 # $Id$
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
-#
-# tiarraは起動時に全ての設定をこのファイルから取得します。
-# このファイルの文字コードは任意ですが、改行コードはLFもしくはCRLFでなければなりません。
-#
-# 半角の#で始まる行はコメントとして無視されます。
-# 行の途中に#を置いた場合はコメントにはなりません。
-#
-# 設定行は「設定名 : 値」の形式で指定されます。
-# 行の先頭及び末尾、コロンの前後の空白は無視されます。
-#
-# 特に指定が無い場合、同じ設定を二度以上繰り返した時は最初に定義された設定が有効になります。
-#
-# ブロックごと省略した場合は、そのブロックの全ての値が省略されたものとみなします。
-# ただし省略不可能な設定もありますので御注意下さい。
-#
-# 「@include foo.conf」という行があると、foo.confがその場所に
-#  挿入されたかのように処理します。
-#
-# {}記号の位置には、それなりの自由度があります。
-# 次の例は全て有効です。
-# block {
-#   foo: bar
-# }
-#
-# block {}
-#
-# block
-# {}
-#
-# 次の例は全て無効です。
-# block {foo: bar}
-#
-# block
-# {foo: bar}
-# 
-# block {
-# foo: bar}
-# 
-# block
-# {foo: bar
-# }
+# このファイルにはすべてのブロックの解説があります。
+# 必要なブロックがあればここからコピーしていってください。
 # -----------------------------------------------------------------------------
 
 # -----------------------------------------------------------------------------
@@ -107,8 +68,6 @@
 # tiarra*  これはtiarraで始まる文字列を表す。
 # +*!*tiarra@*.jp,-re:\d  これは*!*tiarra@*.jpにマッチして、かつ文字列中に数字を含まないものを表す。
 
-# このファイルには重要と思われるいくつかのモジュールしかありません。
-# そのほかのモジュールについては、 all.conf から設定をコピーしてきてください。
 <!begin:modules>
 <&module>
 <!end:modules>
