lang/perl/tiarra/trunk: * re-generate documentation.

--- a/all.conf
+++ b/all.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: all.conf.in 762 2005-02-21 20:05:03Z topia $
+# $Id: all.conf.in 3010 2007-12-10 13:36:55Z topia $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 # このファイルにはすべてのブロックの解説があります。
@@ -183,6 +183,10 @@ networks {
 
   # 上に述べた通り、デフォルトではTiarraはチャンネル名とネットワーク名を@で区切ります。
   # この区切り文字は任意の文字に変更する事が出来ます。省略された場合は@になります。
+  #
+  # System::PrivTranslator モジュールを利用している場合、 prefix の nick 部分にも
+  # 利用されます。そのため、 ! や @ を含む文字列を利用するとクライアントが誤作動する
+  # 場合がありますので注意してください。
   channel-network-separator: @
 
   # 接続先のサーバーから切断された時に、joinしていたそのサーバーのチャンネルをどうするか。
@@ -1323,7 +1327,8 @@ ircnet {
 
   # このモジュールは個人宛てのprivmsgの送信者のnickにネットワーク名を付加します。
   # また、最後に声をかけられてから5分以内の nick 変更をクライアントに伝えます。
-  # 設定項目はありません。
+  # 設定項目はありませんが、 networks/channel-network-separator を ! や @ 以外に
+  # 変更することをおすすめします。
 }
 
 - System::Raw {
