lang/perl/tiarra: update documents

--- a/all.conf
+++ b/all.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: all.conf.in 3010 2007-12-10 13:36:55Z topia $
+# $Id: all.conf.in 3004 2007-12-10 12:45:39Z topia $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 # このファイルにはすべてのブロックの解説があります。
@@ -352,11 +352,26 @@ ircnet {
   # エイリアス置換が有効です。#(nick.now)と$(channel)はそれぞれ
   # 相手の現在のnickとチャンネル名に置換されます。
   #
+  # コマンド: reply
   # 書式: <反応する発言のマスク> <それに対する返事>
   # 例:
   #reply: こんにちは* こんにちは、#(name|nick.now)さん。
   # この例では誰かが「こんにちは」で始まる発言をすると、
   # 発言した人のエイリアスを参照して「こんにちは、○○さん。」のように発言します。
+  #
+  # コマンド: channel-reply
+  # 書式: <反応するチャンネルのマスク> <反応する発言のマスク> <それに対する返事>
+  # 例:
+  #channel-reply: #あいさつ@ircnet こんにちは* こんにちは、#(name|nick.now)さん。
+  # この例では#あいさつ@ircnetで誰かが「こんにちは」で始まる発言をすると、
+  # 発言した人のエイリアスを参照して「こんにちは、○○さん。」のように発言します。
+  #
+  # コマンド: answer-to-myself
+  # 書式: <真偽値>
+  # 例:
+  #answer-to-myself: on
+  # 自分の発言にも反応するようになります。
+  # デフォルトは off です。
 }
 
 - Auto::Calc {
@@ -426,6 +441,48 @@ ircnet {
   #channel: #IRC談話室@ircnet なると消失しました。
 }
 
+- Auto::FetchTitle {
+  # 発言に含まれるURLからタイトルを取得.
+
+  # リクエストタイムアウトまでの時間(秒).
+  timeout: 3
+
+  # 有効にするチャンネルとオプションとURLの設定.
+  #
+  # mask: #test@ircnet &test http://*
+  # mask: * http://*
+  mask: * http://*
+
+  # &test と設定すると conf-test ブロックの中身が使われる.
+  #conf-test {
+  #  auth-test1 {
+  #    url:  http://example.com/*
+  #    user: test
+  #    #pass: test
+  #    pass: {BASE64}dGVzdAo=
+  #  }
+  #  filter-xx {
+  #    url:  http://example.com/*/xx/*
+  #    type: xx
+  #  }
+  #}
+
+  # お返事の前や後ろにつける字句.
+  reply-prefix: "(FetchTitle) "
+  reply-suffix: " [AR]"
+
+  # デバッグフラグ.
+  #debug: 0
+  #debug-mask: #debug-chan your_nick!~you@example.com
+  #debug-dumpfile: fetchtitle.log
+
+  # NOTE:
+  #  利用するにはcodereposから
+  #  module/Tools/HTTPClient.pm     rev.8220
+  #  main/Tiarra/Socket/Buffered.pm rev.8219
+  #  以降が必要です.
+}
+
 - Auto::Joined {
   # 特定のチャンネルに誰かがJOINする度に特定のメッセージを発言する。
 
@@ -481,6 +538,12 @@ ircnet {
 
   # SMTPで自ホストのFQDN [default: localhost]
   #smtpfqdn: localhost
+
+  # SMTPのユーザ。指定されれば SMTP Auth を行う [default: なし]
+  #smtpuser: example1
+
+  # SMTPのパスワード [default: 空パスワード('')]
+  #smtppass: test-password
 
   # 送信するメールの既定件名(エイリアス使用不可) [default: Message from IRC]
   #subject: Message from IRC
@@ -1264,6 +1327,18 @@ ircnet {
 
   # どのメッセージを保存するか。省略されたら保存可能な全てのメッセージを保存する。
   command: privmsg,notice,topic,join,part,quit,kill
+}
+
+- Skelton {
+  # Skelton for tiarra-module.
+
+  # モジュールの説明をこのあたりに書く.
+  # 詳細はこのソースみれば分かると思われ.
+  # 書式は tiarra.conf にそのままコピーできる形式.
+
+  # もにゅもにゅ
+  mask: *!*@*
+  mask: ...
 }
 
 + System::Error {
