--- a/all.conf
+++ b/all.conf
@@ -1353,6 +1353,16 @@ ircnet {
   # remarkのsend-error-as-is-to-clientを指定してください。
 }
 
+- System::LivePatch {
+  # Live Patch.
+
+  # main/* に対する実行時パッチ
+  # 有効にすれば自動で適用される.
+
+  # 対応している箇所.
+  # ModuleManager / reload_modules_if_modified / r3004 => r8009
+}
+
 - System::Macro {
   # 新規にコマンドを追加し、そのコマンドが使われた時に特定の動作をまとめて実行します。
 
