lang/perl/tiarra: System::LivePatch, /livepatch apply されるまで適用は行わないように変更.

--- a/all.conf
+++ b/all.conf
@@ -1357,10 +1357,14 @@ ircnet {
   # Live Patch.
 
   # main/* に対する実行時パッチ
-  # 有効にすれば自動で適用される.
+  # 起動/ロード時に確認は行われるが, 実際の適用は指示があるまで行われない.
 
   # 対応している箇所.
-  # ModuleManager / reload_modules_if_modified / r3004 => r8009
+  # ModuleManager / reload_modules_if_modified / r3004 => r8809
+
+  # /livepatch check で確認.
+  # /livepatch apply で適用.
+  command: livepatch
 }
 
 - System::Macro {
