lang/perl/tiarra: Debug::Core, Tiarra の内部構造追跡モジュールを追加.

--- a/all.conf
+++ b/all.conf
@@ -1111,6 +1111,37 @@ ircnet {
 
 }
 
+- Debug::Core {
+  # Tiarra の内部構造の追跡.
+
+  # Tiarra の内部構造を出力します.
+
+  # トリガー用コマンド.
+  # デフォルトは debugcore
+  command: debugcore
+
+  # [top commands]
+  # help   - show this usage.
+  # bbs    - show BulletinBoard info.
+  # socket - show internal sockets.
+  # module - show module info.
+
+  # [sub commands]
+  # help:
+  # bbs:
+  #   keys - show keys in BulletinBoard.
+  # socket:
+  #   help      - show this usage.
+  #   list      - show installed socket.
+  #   get       - show socket in detail.
+  #   uninstall - uninstall detached socket.
+  # module:
+  #   help    - show this usage.
+  #   summary - show module summary.
+  #   list    - show module list in detail.
+  #   dep     - show module dependency.
+}
+
 - Debug::RawLog {
   # 標準出力にクライアントやサーバとの通信をダンプする。
 
