lang/perl/tiarra: System::WebClient, ドキュメント加筆.

--- a/all.conf
+++ b/all.conf
@@ -1518,6 +1518,58 @@ ircnet {
   #mask: example!example@*.example.jp
 }
 
+- System::WebClient {
+  # ブラウザ上でログを見たり発言したりできます.
+
+  # WebClient を起動させる場所の指定.
+  bind-addr: 127.0.0.1
+  bind-port: 8668
+  path: /irc
+  css: /style/style.css
+
+  # apacheでReverseProxyさせる場合, httpd.conf に以下のように設定.
+  #  ProxyPass        /irc/ http://localhost:8667/irc/
+  #  ProxyPassReverse /irc/ http://localhost:8667/irc/
+  #  <Location /irc/>
+  #  ...
+  #  </Location>
+
+  # 利用する接続設定の一覧.
+  # 空白区切りで評価する順に記述.
+  # 使われる設定は,
+  # - 接続元 IP が一致する物.
+  # - user/passが送られてきていない(認証前/anonymous):
+  #   - 認証不要の設定があればその設定を利用.
+  #   - 認証不要の設定がなければ 401 Unauthorized.
+  # - user/passが送られてきている.
+  #   - 一致する設定を利用.
+  #   - 一致する設定がなければ 401 Unauthorized.
+  #
+  allow: private public
+
+  # 許可する接続の設定.
+  allow-private {
+    # 接続元IPアドレスの制限.
+    host: 127.0.0.1
+    # 認証設定.
+    auth: user pass
+    # 公開するチャンネルの指定.
+    mask: #*@*
+    mask: *@*
+  }
+  allow-public {
+    host: *
+    auth: user2 pass2 realm
+    mask: #公開チャンネル@ircnet
+  }
+
+  # デバッグフラグ.
+  debug: 0
+
+  max-lines: 100
+  name-default: ???
+}
+
 - User::Away::Client {
   # クライアントが一つも接続されていない時にAWAYを設定します。
 
