lang/perl/tiarra: System::WebClient, ドキュメント加筆.

--- a/all.conf
+++ b/all.conf
@@ -1526,8 +1526,7 @@ ircnet {
   bind-port: 8668
   path: /irc
   css: /style/style.css
-
-  # apacheでReverseProxyさせる場合, httpd.conf に以下のように設定.
+  # 上の設定をapacheでReverseProxyさせる場合, httpd.conf には次のように設定.
   #  ProxyPass        /irc/ http://localhost:8667/irc/
   #  ProxyPassReverse /irc/ http://localhost:8667/irc/
   #  <Location /irc/>
@@ -1535,6 +1534,7 @@ ircnet {
   #  </Location>
 
   # 利用する接続設定の一覧.
+  allow: private public
   # 空白区切りで評価する順に記述.
   # 使われる設定は,
   # - 接続元 IP が一致する物.
@@ -1545,7 +1545,6 @@ ircnet {
   #   - 一致する設定を利用.
   #   - 一致する設定がなければ 401 Unauthorized.
   #
-  allow: private public
 
   # 許可する接続の設定.
   allow-private {
@@ -1559,15 +1558,18 @@ ircnet {
   }
   allow-public {
     host: *
-    auth: user2 pass2 realm
+    auth: user2 pass2
     mask: #公開チャンネル@ircnet
   }
 
   # デバッグフラグ.
   debug: 0
 
+  # 保存する最大行数.
   max-lines: 100
-  name-default: ???
+
+  # 発言BOXで名前指定しなかったときのデフォルトの名前.
+  name-default: (noname)
 }
 
 - User::Away::Client {
