lang/perl/tiarra: System::WebClient, config-reload のチェックを追加.

--- a/all.conf
+++ b/all.conf
@@ -448,6 +448,7 @@ ircnet {
   timeout: 3
 
   # 有効にするチャンネルとオプションとURLの設定.
+  # 書式: mask: <channel> [...] <url>
   #
   # mask: #test@ircnet &test http://*
   # mask: * http://*
@@ -457,6 +458,7 @@ ircnet {
   #conf-test {
   #  auth-test1 {
   #    url:  http://example.com/*
+  #    url:  http://example.org/*
   #    user: test
   #    #pass: test
   #    pass: {BASE64}dGVzdAo=
