lang/perl/tiarra: HTTPオブジェクトにRemoteAddrを持たせるように. X-Forwarded-For の展開をサポート.

--- a/all.conf
+++ b/all.conf
@@ -1535,8 +1535,12 @@ ircnet {
   #  ...
   #  </Location>
 
+  # ReverseProxy 利用時の追加設定.
+  # 接続元が全部プロキシサーバになっちゃうのでその対応.
+  #extract-forwarded-for: 127.0.0.1
+
   # 利用する接続設定の一覧.
-  allow: private public
+  #
   # 空白区切りで評価する順に記述.
   # 使われる設定は,
   # - 接続元 IP が一致する物.
@@ -1546,7 +1550,7 @@ ircnet {
   # - user/passが送られてきている.
   #   - 一致する設定を利用.
   #   - 一致する設定がなければ 401 Unauthorized.
-  #
+  allow: private public
 
   # 許可する接続の設定.
   allow-private {
@@ -1565,13 +1569,18 @@ ircnet {
   }
 
   # デバッグフラグ.
-  debug: 0
+  #debug: 0
 
   # 保存する最大行数.
-  max-lines: 100
+  #max-lines: 100
+
+  # クライアントモード.
+  # owner か shared.
+  # mode: owner
 
   # 発言BOXで名前指定しなかったときのデフォルトの名前.
-  name-default: (noname)
+  # mode: shared の時に使われる.
+  #name-default: (noname)
 }
 
 - User::Away::Client {
