--- a/all.conf
+++ b/all.conf
@@ -405,7 +405,7 @@ ircnet {
 
   # いくつかの例を挙げます。
   #signal-alarm-format: #(method): 時間切れです。
-  #signal-sigfpe-format: $(method): 浮動小数点計算例外です。
+  #signal-sigfpe-format: #(method): 浮動小数点計算例外です。
 
   # タイムアウトする秒数を指定します。 alarm に渡されます。
   # 再帰を止めるのに使えますが、どうもメモリリークしていそうな雰囲気です。
