--- a/all.conf
+++ b/all.conf
@@ -829,6 +829,44 @@ ircnet {
   interval: 3
 }
 
+- CTCP::DCC::RewriteAddress {
+  # クライアントが送信した CTCP DCC のアドレスを変換する。
+
+  # CTCP DCC に指定されているアドレスを、 tiarra で取得したものに
+  # 書き換えます。
+
+  # このモジュールは一旦 CTCP DCC メッセージを破棄するので、
+  # 別のクライアントには送信されません。
+
+  # 変換する DCC タイプ。省略すると全てのDCCを処理する。
+  type: send chat
+
+  # 変換用アドレスの取得方法を選択する。デフォルト値はありません。
+  resolver: client-socket server-socket
+
+  server-socket {
+    # サーバソケットのローカルアドレスを取ります。
+
+    # client <-> tiarra[this address] <-> server
+  }
+
+  client-socket {
+    # クライアントソケットのリモートアドレスを取ります。
+
+    # client [this address]<-> tiarra <-> server
+  }
+
+  dns {
+    # DNS を引いて決定します。IPアドレスの指定も可能です。
+    host: example.com
+  }
+
+  http {
+    url: http://checkip.dyndns.org/
+    regex: Current IP Address: (\d+\.\d+\.\d+\.\d+)
+  }
+}
+
 - CTCP::Ping {
   # CTCP PINGに応答する。
 
@@ -1527,7 +1565,7 @@ ircnet {
   bind-addr: 127.0.0.1
   bind-port: 8668
   path: /irc
-  css: /style/style.css
+  css: /style/irc-style.css
   # 上の設定をapacheでReverseProxyさせる場合, httpd.conf には次のように設定.
   #  ProxyPass        /irc/ http://localhost:8667/irc/
   #  ProxyPassReverse /irc/ http://localhost:8667/irc/
@@ -1577,6 +1615,10 @@ ircnet {
   # クライアントモード.
   # owner か shared.
   # mode: owner
+
+  # ログの方向.
+  # asc (旧->新) か desc (新->旧).
+  # sort-order: asc
 
   # 発言BOXで名前指定しなかったときのデフォルトの名前.
   # mode: shared の時に使われる.
