--- a/sample.conf
+++ b/sample.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: sample.conf.in 3010 2007-12-10 13:36:55Z topia $
+# $Id: sample.conf.in 3004 2007-12-10 12:45:39Z topia $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 #
@@ -397,6 +397,44 @@ ircnet {
 
   # CTCP::Versionのintervalと同じ。
   interval: 3
+}
+
+- CTCP::DCC::RewriteAddress {
+  # クライアントが送信した CTCP DCC のアドレスを変換する。
+
+  # CTCP DCC に指定されているアドレスを、 tiarra で取得したものに
+  # 書き換えます。
+
+  # このモジュールは一旦 CTCP DCC メッセージを破棄するので、
+  # 別のクライアントには送信されません。
+
+  # 変換する DCC タイプ。省略すると全てのDCCを処理する。
+  type: send chat
+
+  # 変換用アドレスの取得方法を選択する。デフォルト値はありません。
+  resolver: client-socket server-socket
+
+  server-socket {
+    # サーバソケットのローカルアドレスを取ります。
+
+    # client <-> tiarra[this address] <-> server
+  }
+
+  client-socket {
+    # クライアントソケットのリモートアドレスを取ります。
+
+    # client [this address]<-> tiarra <-> server
+  }
+
+  dns {
+    # DNS を引いて決定します。IPアドレスの指定も可能です。
+    host: example.com
+  }
+
+  http {
+    url: http://checkip.dyndns.org/
+    regex: Current IP Address: (\d+\.\d+\.\d+\.\d+)
+  }
 }
 
 - CTCP::Ping {
