--- a/all.conf
+++ b/all.conf
@@ -833,17 +833,21 @@ ircnet {
   # クライアントが送信した CTCP DCC のアドレスを変換する。
 
   # CTCP DCC に指定されているアドレスを、 tiarra で取得したものに
-  # 書き換えます。
+  # 書き換えます。(EXPERIMENTAL)
 
   # このモジュールは一旦 CTCP DCC メッセージを破棄するので、
   # 別のクライアントには送信されません。
 
-  # 変換する DCC タイプ。省略すると全てのDCCを処理する。
-  type: send chat
+  # 変換する DCC タイプ。 [デフォルト値: CHAT SEND]
+  type: CHAT SEND
 
   # 変換用アドレスの取得方法を選択する。デフォルト値はありません。
-  resolver: client-socket server-socket
+  # 以下の取得方法(server-socket client-socket dns http)から
+  # 必要なもの(複数可)を指定してください。
+  resolver: client-socket server-socket dns http
 
+  # 取得方法と設定
+  # なにも設定がないときはブロック自体を省略することもできます。
   server-socket {
     # サーバソケットのローカルアドレスを取ります。
 
