--- a/all.conf
+++ b/all.conf
@@ -485,6 +485,39 @@ ircnet {
   #  以降が必要です.
 }
 
+- Auto::Im {
+  # 名前が呼ばれると、その発言をim.kayac.comに送信する
+
+  # 反応する人のマスクを指定します。
+  # 省略すると全員に反応します。
+  mask: * *!*@*
+
+  # 反応するキーワードを正規表現で指定します。
+  # 複数指定したい時は複数行指定してください。
+  #regex-keyword: (?i:fugahoge)
+
+  # 反応するキーワードを指定します。
+  # 複数指定したい時は,(コンマ)で区切るか、複数行指定してください。
+  keyword: hoge
+
+  # im.kayac.com に送るメッセージのフォーマットを指定します。
+  # デフォルト値: [tiarra][#(channel):#(nick.now)] #(text)
+  format: [tiarra][#(channel):#(nick.now)] #(text)
+
+  # im.kayac.comで登録したユーザ名を入力します。
+  # im.kayac.comについては http://im.kayac.com/#docs を参考にしてください。
+  user: username
+
+  # im.kayac.comで秘密鍵認証を選択した場合は設定してください。
+  # 省略すると認証なしになります。
+  #secret: some secret
+
+  # im.kayac.comでパスワード認証を選択した場合は設定してください。
+  # 省略すると認証なしになります。
+  # secret と両方指定した場合は secret が優先されています。
+  #password: some password
+}
+
 - Auto::Joined {
   # 特定のチャンネルに誰かがJOINする度に特定のメッセージを発言する。
 
@@ -834,7 +867,9 @@ ircnet {
 
   # CTCP DCC に指定されているアドレスを、 tiarra で取得したものに
   # 書き換えます。(EXPERIMENTAL)
-
+  #
+  # IPv4 のみサポートしています。
+  #
   # このモジュールは一旦 CTCP DCC メッセージを破棄するので、
   # 別のクライアントには送信されません。
 
@@ -846,17 +881,17 @@ ircnet {
   # 必要なもの(複数可)を指定してください。
   resolver: client-socket server-socket dns http
 
+
   # 取得方法と設定
   # なにも設定がないときはブロック自体を省略することもできます。
+
   server-socket {
     # サーバソケットのローカルアドレスを取ります。
-
     # client <-> tiarra[this address] <-> server
   }
 
   client-socket {
     # クライアントソケットのリモートアドレスを取ります。
-
     # client [this address]<-> tiarra <-> server
   }
 
@@ -866,9 +901,30 @@ ircnet {
   }
 
   http {
+    # 現状では単純な GET しかサポートしていません。
+
+    # アクセス先 URL
     url: http://checkip.dyndns.org/
+
+    # IP アドレス取得用 regex
     regex: Current IP Address: (\d+\.\d+\.\d+\.\d+)
   }
+
+  # リゾルバの選び方
+  #
+  #  * tiarra を動作させているサーバとインターネットの間にルータ等があり、
+  #    グローバルアドレスがない場合
+  #      *-socket は役に立ちません。 http を利用してください。
+  #      適当な DDNS を持っていればdns も良いでしょう。
+  #
+  #  * tiarra がレンタルサーバなどLAN上にないサーバで動作している場合
+  #      server-socket, http は役に立ちません。
+  #      client-socket がお勧めです。
+  #
+  #  * tiarra がLAN上にあり、グローバルアドレスのついているホストで
+  #    動作している場合
+  #      client-socket は役に立ちません。
+  #      server-socket がお勧めです。
 }
 
 - CTCP::Ping {
