--- a/sample.conf
+++ b/sample.conf
@@ -404,7 +404,9 @@ ircnet {
 
   # CTCP DCC に指定されているアドレスを、 tiarra で取得したものに
   # 書き換えます。(EXPERIMENTAL)
-
+  #
+  # IPv4 のみサポートしています。
+  #
   # このモジュールは一旦 CTCP DCC メッセージを破棄するので、
   # 別のクライアントには送信されません。
 
@@ -416,17 +418,17 @@ ircnet {
   # 必要なもの(複数可)を指定してください。
   resolver: client-socket server-socket dns http
 
+
   # 取得方法と設定
   # なにも設定がないときはブロック自体を省略することもできます。
+
   server-socket {
     # サーバソケットのローカルアドレスを取ります。
-
     # client <-> tiarra[this address] <-> server
   }
 
   client-socket {
     # クライアントソケットのリモートアドレスを取ります。
-
     # client [this address]<-> tiarra <-> server
   }
 
@@ -436,9 +438,30 @@ ircnet {
   }
 
   http {
+    # 現状では単純な GET しかサポートしていません。
+
+    # アクセス先 URL
     url: http://checkip.dyndns.org/
+
+    # IP アドレス取得用 regex
     regex: Current IP Address: (\d+\.\d+\.\d+\.\d+)
   }
+
+  # リゾルバの選び方
+  #
+  #  * tiarra を動作させているサーバとインターネットの間にルータ等があり、
+  #    グローバルアドレスがない場合
+  #      *-socket は役に立ちません。 http を利用してください。
+  #      適当な DDNS を持っていればdns も良いでしょう。
+  #
+  #  * tiarra がレンタルサーバなどLAN上にないサーバで動作している場合
+  #      server-socket, http は役に立ちません。
+  #      client-socket がお勧めです。
+  #
+  #  * tiarra がLAN上にあり、グローバルアドレスのついているホストで
+  #    動作している場合
+  #      client-socket は役に立ちません。
+  #      server-socket がお勧めです。
 }
 
 - CTCP::Ping {
