Auto::FetchTitle::Plugin::Mixi, ExtractHeading の tiarra-doc をマージ.

--- a/all.conf
+++ b/all.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: all.conf.in 11357 2008-05-10 14:03:50Z topia $
+# $Id: all.conf.in 11365 2008-05-10 14:58:28Z topia $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 # このファイルにはすべてのブロックの解説があります。
@@ -483,6 +483,39 @@ ircnet {
   #  module/Tools/HTTPClient.pm     rev.8220
   #  main/Tiarra/Socket/Buffered.pm rev.8219
   #  以降が必要です.
+}
+
+- Auto::FetchTitle::Plugin::ExtractHeading {
+  # 本文から見出しを抽出するFetchTitleプラグイン.
+
+  # Auto::FetchTitle { ... } での設定.
+  # + Auto::FetchTitle {
+  #     plugins {
+  #       ExtractHeading {
+  #         extra: name1 name2 ...
+  #         extra-name1 {
+  #           url:        http://www.example.com/*
+  #           recv_limit: 10*1024
+  #           extract:    re:<div id="title">(.*?)</div>
+  #         }
+  #       }
+  #    }
+  #  }
+}
+
+- Auto::FetchTitle::Plugin::Mixi {
+  # Mixiにログインして見出し抽出出来るようにするFetchTitleプラグイン.
+
+  # Auto::FetchTitle { ... } での設定.
+  # + Auto::FetchTitle {
+  #     plugins {
+  #       Mixi {
+  #         mixi-user: xxx
+  #         mixi-pass: yyy
+  #       }
+  #    }
+  #  }
+  # mixi-pass には {B}bbbb でBASE64エンコード値も可能.
 }
 
 - Auto::Im {
