Log::Channel, 自動でチャンネル別にログを保存できるように.

--- a/all.conf
+++ b/all.conf
@@ -224,9 +224,15 @@ networks {
 # そのアドレス、ポート、(必要なら)パスワードを定義します。
 # -----------------------------------------------------------------------------
 ircnet {
-  # サーバーのホストとポート。省略不可。
-  host: irc.nara.wide.ad.jp
-  port: 6663
+  # サーバーのホストとポートを指定。複数行可。(host/port が指定されていない場合は)省略不可。
+  # 同じサーバの複数のポート指定は順番に試すので、大量に書かない方がよい。
+  server: irc.nara.wide.ad.jp 6662 6663
+  server: irc.fujisawa.wide.ad.jp 6661 6664
+
+  # サーバーのホストとポート。(server が指定されていない場合は)省略不可。
+  # server を指定した場合は server が優先されます。
+  #host: irc.nara.wide.ad.jp
+  #port: 6663
 
   # general/userで設定したユーザ名を使わずに、各ネットワークで独自のユーザ名を使用する事も可能。
   # 省略されたら当然、general/userで設定したものが使われる。
@@ -535,6 +541,7 @@ ircnet {
 
   # im.kayac.com に送るメッセージのフォーマットを指定します。
   # デフォルト値: [tiarra][#(channel):#(nick.now)] #(text)
+  # #(channel) のかわりに #(raw_channel) を利用するとネットワーク名がつきません。
   format: [tiarra][#(channel):#(nick.now)] #(text)
 
   # im.kayac.comで登録したユーザ名を入力します。
@@ -1369,8 +1376,17 @@ ircnet {
   # channel: others *
   # この例では、#IRC談話室@ircnetのログはIRCDanwasitu/%Y.%m.%d.txtに、
   # それ以外(privも含む)のログはothers/%Y.%m.%d.txtに保存される。
+  # #(channel) はチャンネル名に展開される。
+  # (古いバージョンだと展開されずにそのままディレクトリ名になってしまいます。)
   channel: priv priv
-  channel: others *
+  channel: #(channel) *
+  #channel: others *
+
+  # ファイル名のエンコーディング.
+  # 指定可能な値は, utf8, sjis, euc, jis, ascii.
+  # ascii は実際には utf8 と同等で8bit部分が全てquoted-printableされる.
+  # デフォルトはWindowsではsjis, それ以外では utf8.
+  #filename-encoding: utf8
 }
 
 - Log::ChannelList {
