ドキュメント系更新.

--- a/all.conf
+++ b/all.conf
@@ -513,15 +513,32 @@ ircnet {
   # Mixiにログインして見出し抽出出来るようにするFetchTitleプラグイン.
 
   # Auto::FetchTitle { ... } での設定.
+  #
   # + Auto::FetchTitle {
-  #     plugins {
-  #       Mixi {
-  #         mixi-user: xxx
-  #         mixi-pass: yyy
-  #       }
+  #    mask: #* &mixi http://*
+  #    plugins {
+  #      Mixi {
+  #        mixi-user: xxx
+  #        mixi-pass: yyy
+  #      }
+  #    }
+  #    conf-mixi {
+  #      filter-mixi {
+  #        url: http://mixi.jp/*
+  #        url: http://news.mixi.jp/*
+  #        type: mixi
+  #        timeout: 10
+  #        #閲覧可能なコミュニティの指定.
+  #        #mixi-community: 0
+  #      }
   #    }
   #  }
+  #
+  # アカウント情報は plugins Mixi に記述.
   # mixi-pass には {B}bbbb でBASE64エンコード値も可能.
+  #
+  # newsだけしか使わない場合でも, ログイン処理が必要なので
+  # mixi.jp/* 側も必要になります.
 }
 
 - Auto::Im {
@@ -1541,6 +1558,8 @@ ircnet {
 
   # 対応している箇所.
   # ModuleManager / reload_modules_if_modified / r3004 => r8809
+  # LinedINETSocket / connect / r3004 => r8930
+  # Configuration::Block / equals / r3004 => r11868
 
   # /livepatch check で確認.
   # /livepatch apply で適用.
