WebClient, 未読管理をひとまず実装. SoftBank,AUの端末認証を実装. 別のTiarraさんからのログを見やすく.

--- a/all.conf
+++ b/all.conf
@@ -1703,6 +1703,7 @@ ircnet {
 
   # ReverseProxy 利用時の追加設定.
   # 接続元が全部プロキシサーバになっちゃうのでその対応.
+  # ReverseProxy 使わず直接公開の場合は不要.
   #extract-forwarded-for: 127.0.0.1
 
   # 利用する接続設定の一覧.
@@ -1723,7 +1724,14 @@ ircnet {
     # 接続元IPアドレスの制限.
     host: 127.0.0.1
     # 認証設定.
-    auth: user pass
+    # auth: <user> <pass>
+    # auth: :basic <user> <pass>
+    # auth: :softbank <端末ID>
+    # auth: :softbank <UID>
+    # auth: :au <SUBNO>
+    # <pass> には {MD5}xxxx や {B}xxx を利用可能.
+    # そのままべた書きも出来るけれど.
+    auth: :basic user pass
     # 公開するチャンネルの指定.
     mask: #*@*
     mask: *@*
@@ -1751,6 +1759,16 @@ ircnet {
   # 発言BOXで名前指定しなかったときのデフォルトの名前.
   # mode: shared の時に使われる.
   #name-default: (noname)
+
+  # 外部にTiarraさんを使っているときに, そこのネットワークを切り出して表示する.
+  # exteact-network: <netname> <remote-sep>
+  # <netname> ::= このTiarraさんから見たときの外部Tiarraさんのネットワーク名.
+  #               (このtiarra.confで指定しているネットワーク名)
+  # <remote-sep> ::= 外部Tiarraさんで使っているセパレータ.
+  #                  (こっちはこのtiarra.confのではないです)
+  #                  省略すると @ と仮定.
+  #exteact-network: tiarra
+  #exteact-network: tiarra @
 }
 
 - User::Away::Client {
