クライアント一覧をリストアップする System::ClientList モジュール作成.

--- a/all.conf
+++ b/all.conf
@@ -1538,6 +1538,21 @@ ircnet {
   mask: ...
 }
 
+- System::ClientList {
+  # Clientsの一覧を取得.
+
+  # 接続しているクライアントを一覧.
+  # /clientlist を投げると, その時に接続しているクライアントの一覧を返す.
+  # 出力例:
+  # clientlist
+  #   *** 1 client
+  #   *** [1] 127.0.0.1:23695
+
+
+  # 一覧を返すトリガーとするコマンド.
+  #command: clientlist
+}
+
 + System::Error {
   # サーバーからのERRORメッセージをNOTICEに埋め込む
 
