System::ClientList から Client::List にリネーム.

--- a/all.conf
+++ b/all.conf
@@ -1197,6 +1197,21 @@ ircnet {
   #                  Client::Guess から使用されます。)
 }
 
+- Client::List {
+  # Clientの一覧を取得.
+
+  # 接続しているクライアントを一覧.
+  # /clientlist を投げると, その時に接続しているクライアントの一覧を返す.
+  # 出力例:
+  # clientlist
+  #   *** 1 client
+  #   *** [1] 127.0.0.1:23695
+
+
+  # 一覧を返すトリガーとするコマンド.
+  #command: clientlist
+}
+
 - Client::PatchworkMessage {
   # IRC メッセージにちょっと変更を加えて、クライアントのバグを抑制する
 
@@ -1536,21 +1551,6 @@ ircnet {
   # もにゅもにゅ
   mask: *!*@*
   mask: ...
-}
-
-- System::ClientList {
-  # Clientsの一覧を取得.
-
-  # 接続しているクライアントを一覧.
-  # /clientlist を投げると, その時に接続しているクライアントの一覧を返す.
-  # 出力例:
-  # clientlist
-  #   *** 1 client
-  #   *** [1] 127.0.0.1:23695
-
-
-  # 一覧を返すトリガーとするコマンド.
-  #command: clientlist
 }
 
 + System::Error {
