Auto::Reply, 間違えてたところもう一箇所修正.

--- a/all.conf
+++ b/all.conf
@@ -867,7 +867,7 @@ ircnet {
     mask: * *!*@*
     # plum: mask: *!*@*
 
-    # このブロックが発言に反応する確率を指定します。
+    # マッチした１つの反応マスクが実際に発言に反応する確率を指定します。
     # 百分率です。省略された場合は100と見做されます。
     rate: 100
 
