ドキュメント更新.

--- a/all.conf
+++ b/all.conf
@@ -1760,7 +1760,7 @@ ircnet {
   bind-addr: 127.0.0.1
   bind-port: 8668
   path: /irc
-  css: /style/irc-style.css
+  css: /irc/style/style.css
   # 上の設定をapacheでReverseProxyさせる場合, httpd.conf には次のように設定.
   #  ProxyPass        /irc/ http://localhost:8667/irc/
   #  ProxyPassReverse /irc/ http://localhost:8667/irc/
@@ -1796,7 +1796,7 @@ ircnet {
     # auth: :softbank <端末ID>
     # auth: :softbank <UID>
     # auth: :au <SUBNO>
-    # <pass> には {MD5}xxxx や {B}xxx を利用可能.
+    # 各値(<pass>等)には {MD5}xxxx や {B}xxx や {CRYPT}xxx を利用可能.
     # そのままべた書きも出来るけれど.
     auth: :basic user pass
     # 公開するチャンネルの指定.
@@ -1823,9 +1823,10 @@ ircnet {
   # asc (旧->新) か desc (新->旧).
   # sort-order: asc
 
-  # 発言BOXで名前指定しなかったときのデフォルトの名前.
-  # mode: shared の時に使われる.
-  #name-default: (noname)
+  # name-default 設定は VERSION 0.05 で廃止されました.
+  # # 発言BOXで名前指定しなかったときのデフォルトの名前.
+  # # mode: shared の時に使われる.
+  # -name-default: (noname)
 
   # 外部にTiarraさんを使っているときに, そこのネットワークを切り出して表示する.
   # exteact-network: <netname> <remote-sep>
