--- a/mini.conf
+++ b/mini.conf
@@ -118,7 +118,7 @@ irc2ch {
   bind-addr: 127.0.0.1
   bind-port: 8668
   path: /irc/
-  css:  /style/style.css
+  css:  /irc/style/style.css
 
   # —˜—p‚·‚éÚ‘±İ’è‚Ìˆê——.
   allow: private
