* Auto::FetchTitle: fixed regexps.  * whitespace changes.  * et cetera.

--- a/doc-src/sample.conf.in
+++ b/doc-src/sample.conf.in
@@ -4,7 +4,7 @@
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 #
-# tiarraは起動時に全ての設定をこのファイルから取得します。
+# Tiarraは起動時に全ての設定をこのファイルから取得します。
 # このファイルの文字コードは任意ですが、改行コードはLFもしくはCRLFでなければなりません。
 #
 # 半角の#で始まる行はコメントとして無視されます。
