--- a/all.conf
+++ b/all.conf
@@ -52,7 +52,7 @@ general {
   # crypt は ./tiarra --make-password で行えます。
   tiarra-password: xl7cflIcH9AwE
 
-  # 外部プログラムからtiarraをコントロールする為のUNIXドメインソケットの名前。
+  # 外部プログラムからTiarraをコントロールする為のUNIXドメインソケットの名前。
   # 例えば"foo"を指定した場合、ソケット/tmp/tiarra-control/fooが作られる。
   # 省略された場合はこの機能を無効とする。
   # また、非UNIX環境ではそもそもUNIXドメインソケットが利用可能でないため、
@@ -105,7 +105,7 @@ general {
   #ipv4-bind-addr: 0.0.0.0
   #ipv6-bind-addr: ::0
 
-  # tiarra が、 001 や 002 や、 recent log を送信するときなどに使う prefix
+  # Tiarra が、 001 や 002 や、 recent log を送信するときなどに使う prefix
   # を指定します。 hostname や fqdn っぽいものを指定すると良いかもしれません。
   # デフォルトは tiarra です。普通変える必要はありません。
   #sysmsg-prefix: tiarra
@@ -974,7 +974,7 @@ ircnet {
 - CTCP::DCC::RewriteAddress {
   # クライアントが送信した CTCP DCC のアドレスを変換する。
 
-  # CTCP DCC に指定されているアドレスを、 tiarra で取得したものに
+  # CTCP DCC に指定されているアドレスを、 Tiarra で取得したものに
   # 書き換えます。(EXPERIMENTAL)
   #
   # IPv4 のみサポートしています。
@@ -1001,7 +1001,7 @@ ircnet {
 
   client-socket {
     # クライアントソケットのリモートアドレスを取ります。
-    # client [this address]<-> tiarra <-> server
+    # client [this address]<-> Tiarra <-> server
   }
 
   dns {
@@ -1021,16 +1021,16 @@ ircnet {
 
   # リゾルバの選び方
   #
-  #  * tiarra を動作させているサーバとインターネットの間にルータ等があり、
+  #  * Tiarra を動作させているサーバとインターネットの間にルータ等があり、
   #    グローバルアドレスがない場合
   #      *-socket は役に立ちません。 http を利用してください。
   #      適当な DDNS を持っていればdns も良いでしょう。
   #
-  #  * tiarra がレンタルサーバなどLAN上にないサーバで動作している場合
+  #  * Tiarra がレンタルサーバなどLAN上にないサーバで動作している場合
   #      server-socket, http は役に立ちません。
   #      client-socket がお勧めです。
   #
-  #  * tiarra がLAN上にあり、グローバルアドレスのついているホストで
+  #  * Tiarra がLAN上にあり、グローバルアドレスのついているホストで
   #    動作している場合
   #      client-socket は役に立ちません。
   #      server-socket がお勧めです。
@@ -1102,7 +1102,7 @@ ircnet {
   # 注意点
   # - この機能はまだ実装途中です。いろいろな不具合があるかもしれません。むしろきっとあります。
   # - サーバがわとの通信に割り込みますのでログにもとられません。
-  # - この機能を使っている tiarra より上流に multi-server-mode な tiarra を置かないでください。
+  # - この機能を使っている Tiarra より上流に multi-server-mode な Tiarra を置かないでください。
 
   # チャンネルの定義。
   # また、privの場合は「priv@ネットワーク名」という文字列をチャンネル名の代わりとしてマッチングを行なう。
