--- a/all.conf
+++ b/all.conf
@@ -756,6 +756,22 @@ ircnet {
   out: チャンネルに入っていない
 }
 
+- Auto::Outputz {
+  # チャンネルの発言文字数を outputz に送信する
+
+  # 復活の呪文。
+  key: some secret
+
+  # 各チャンネルのURIの設定。
+  # 記述された順序で検索されるので、全てのチャンネルにマッチする"*"などは最後に書かなければならない。
+  # フォーマットは次の通り。
+  # channel: <URI> (<チャンネル名> / 'priv')@<ネットワーク名>
+  # #(channel) はチャンネル名に、 #(channel_short) はネットワークなしの
+  # チャンネル名に、 #(network) はネットワーク名にそれぞれ置き換えられる。
+  # また、危険な文字は自動的にエスケープされる。
+  channel: http://irc.example.com/#(network)/#(channel_short) *
+}
+
 - Auto::Random {
   # 特定の発言に反応してランダムな発言をします。
 
