--- a/sample.conf
+++ b/sample.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: sample.conf.in 11365 2008-05-10 14:58:28Z topia $
+# $Id: sample.conf.in 15771 2008-07-13 23:55:21Z drry $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 #
