--- a/all.conf
+++ b/all.conf
@@ -762,6 +762,12 @@ ircnet {
   # 復活の呪文。
   key: some secret
 
+  # 送信対象にするコマンドの設定。
+  # 省略された場合は PRIVMSG 。
+  # パラメータ1が送信先、パラメータ2が本文でなければ動作しないので、
+  # 動作するコマンドは PRIVMSG/NOTICE/TOPIC/PART 程度。
+  #command: PRIVMSG
+
   # 各チャンネルのURIの設定。
   # 記述された順序で検索されるので、全てのチャンネルにマッチする"*"などは最後に書かなければならない。
   # フォーマットは次の通り。
@@ -769,7 +775,7 @@ ircnet {
   # #(channel) はチャンネル名に、 #(channel_short) はネットワークなしの
   # チャンネル名に、 #(network) はネットワーク名にそれぞれ置き換えられる。
   # また、危険な文字は自動的にエスケープされる。
-  channel: http://irc.example.com/#(network)/#(channel_short) *
+  channel: http://#(network).irc.example.com/#(channel_short) *
 }
 
 - Auto::Random {
