fetchtitle.mixi, ログインエラーの検出. エラーメッセージを日本語に＆設定で変えれるように.

--- a/all.conf
+++ b/all.conf
@@ -530,6 +530,12 @@ ircnet {
   #        timeout: 10
   #        #閲覧可能なコミュニティの指定.
   #        #mixi-community: 0
+  #        #閲覧可能なユーザの指定.
+  #        #指定したユーザには足跡踏んで見に行きます.
+  #        #mixi-friend:    0
+  #        #閲覧可能にしていないページを表示したときのメッセージ.
+  #        #要求されたページを #(url) で展開できます.
+  #        #mixi-noperm-msg: not permitted #(url).
   #      }
   #    }
   #  }
@@ -538,7 +544,12 @@ ircnet {
   # mixi-pass には {B}bbbb でBASE64エンコード値も可能.
   #
   # newsだけしか使わない場合でも, ログイン処理が必要なので
-  # mixi.jp/* 側も必要になります.
+  # mixi.jp 内のいくつかのURLはこのプラグインで処理する必要があります.
+  #   url: http://news.mixi.jp/*
+  #   url: http://mixi.jp/issue_ticket.pl?*
+  #   url: http://mixi.jp/login.pl
+  #   url: http://mixi.jp/check.pl?*
+  # (それぞれ, ニュースページ, ログイン処理, エラー検出, 途中経路になります.)
 }
 
 - Auto::Im {
