mini.conf から irc2ch の設定をコメントアウト.

--- a/mini.conf
+++ b/mini.conf
@@ -67,7 +67,7 @@ networks {
   # 接続するIRCネットワークに名前を付けます。この名前は後で使用します。
   # 複数のネットワークに接続したい場合は多重定義して下さい。
   name: ircnet
-  name: irc2ch
+  #name: irc2ch
 
   channel-network-separator: @
 
