--- a/all.conf
+++ b/all.conf
@@ -198,7 +198,7 @@ networks {
   # 3. "message-for-each"の場合は、切断されるとクライアントに宛ててTiarraが
   #    到達不能になった全てのチャンネルにNOTICEでその旨を報告する。
   #    再接続に成功すると再びNOTICEで報告する。JOINやPARTはしない。
-  # デフォルトはpart-and-joinです。
+  # 省略時のデフォルトはpart-and-joinです。
   action-when-disconnected: message-for-each
 
   # NICKを変更する度に、変更したサーバーでの新しいNICKをNOTICEで常に通知するかどうか。
@@ -1368,6 +1368,23 @@ ircnet {
 
 }
 
+- Client::SingleServer {
+  # 指定したクライアントのためにシングルサーバモードをエミュレーションする
+
+  # このモジュールは実験的なモジュールです。
+  # 本番環境に適用する前には、動作について十分に確認してください。
+
+  # 使用する client option は server-only=network name の形式で指定してください。
+
+  # realname (クライアントにより 名前 / 名前の説明 などになっている場合もあり) に
+  # $server-only=ircnet$ などと指定すれば動作するかと思います。
+
+  # 設定されたクライアントを接続している最中にモジュールのロード・アンロードを
+  # 行った場合の動作は未定義です。
+  # かならずクライアントを切断してから切り替えてください。
+  # また、アップデート等で本モジュールの更新を行う際にもクライアントの切断を推奨します。
+}
+
 - Debug::Core {
   # Tiarra の内部構造の追跡.
 
@@ -1626,8 +1643,8 @@ ircnet {
   command: privmsg,notice,topic,join,part,quit,kill
 }
 
-- Skelton {
-  # Skelton for tiarra-module.
+- Skeleton {
+  # Skeleton for tiarra-module.
 
   # モジュールの説明をこのあたりに書く.
   # 詳細はこのソースみれば分かると思われ.
@@ -1838,7 +1855,7 @@ ircnet {
   }
   allow-public {
     host: *
-    auth: user2 pass2
+    auth: :basic user2 pass2
     mask: #公開チャンネル@ircnet
   }
 
