--- a/sample.conf
+++ b/sample.conf
@@ -237,7 +237,7 @@ networks {
   # 3. "message-for-each"の場合は、切断されるとクライアントに宛ててTiarraが
   #    到達不能になった全てのチャンネルにNOTICEでその旨を報告する。
   #    再接続に成功すると再びNOTICEで報告する。JOINやPARTはしない。
-  # デフォルトはpart-and-joinです。
+  # 省略時のデフォルトはpart-and-joinです。
   action-when-disconnected: message-for-each
 
   # NICKを変更する度に、変更したサーバーでの新しいNICKをNOTICEで常に通知するかどうか。
