Auto::Calc, 全角空白での区切りに対応.

--- a/all.conf
+++ b/all.conf
@@ -434,6 +434,11 @@ ircnet {
 
   # 再初期化したときの発言を指定します。
   init-format: 初期化しました。
+
+  # 別の shared-mode な System::WebClient からの発言に対応(yes/no).
+  # 自分自身の発言は未対応.
+  # [default: no]
+  #support-shared-webclient: no
 }
 
 - Auto::ChannelWithoutOper {
