* added `svn:ignore` property.  * documentation.

--- a/all.conf
+++ b/all.conf
@@ -14,7 +14,7 @@
 # -----------------------------------------------------------------------------
 general {
   # tiarra.conf自身の文字コード
-  # コード名はjis,sjis,euc,utf8,utf16,utf32等。(この値はUnicode::Japaneseにそのまま渡されます)
+  # コード名はjis,sjis,euc,utf8,utf16,utf32等。(この値はEncodeまたはUnicode::Japaneseにそのまま渡されます)
   # autoが指定された、または省略された場合は自動判別します。
   conf-encoding: utf8
 
@@ -59,13 +59,13 @@ general {
   # そのような場合にもこの機能は無効となる。
   #control-socket-name: test
 
-  # IRCサーバーから送られる文字のコードと、IRCサーバーへ送る文字のコード
-  # どちらも省略された場合はjis。
+  # IRCサーバーから送られる文字のコードと、IRCサーバーへ送る文字のコード。
+  # それぞれ省略された場合はjis。
   server-in-encoding: jis
   server-out-encoding: jis
 
-  # クライアントから受け取る文字のコードと、クライアントへ伝える文字のコード
-  # どちらも省略された場合はjis。
+  # クライアントから受け取る文字のコードと、クライアントへ伝える文字のコード。
+  # それぞれ省略された場合はjis。
   client-in-encoding: jis
   client-out-encoding: jis
 
@@ -94,7 +94,7 @@ general {
   #  mask: ++{example3}@ircnet,-+{example4}@2ch  +*!*@*.example.com # +で始まるチャンネル。
   #  mask: *                                     -*!*@*
   #-----------------
-  # となります。 この二つはまったく同じマスクを表しています。
+  # となります。この二つはまったく同じマスクを表しています。
 
   # この値をplumにすると、plum形式、省略するかtiarraを指定すると、Tiarra形式になります。
   chanmask-mode: tiarra
@@ -459,7 +459,7 @@ ircnet {
   timeout: 3
 
   # 有効にするチャンネルとオプションとURLの設定.
-  # 書式: mask: <channel> [...] <url>
+  # 書式: mask: <channel> [<&conf>...] <url>
   #
   # mask: #test@ircnet &test http://*
   # mask: * http://*
@@ -711,6 +711,70 @@ ircnet {
 
   #fatalerror-first: SMTPサーバに接続できません。
   #fatalerror: SMTPセッションで致命的なエラーがありました。#(line; サーバ応答:%s|;)#(state; on %s|;)
+}
+
+- Auto::Notify {
+  # 名前が呼ばれると、その発言をim.kayac.comに送信する
+
+  # 反応する人のマスクを指定します。
+  # 省略すると全員に反応します。
+  mask: * *!*@*
+
+  # 反応するキーワードを正規表現で指定します。
+  # 複数指定したい時は複数行指定してください。
+  #regex-keyword: (?i:fugahoge)
+
+  # 反応するキーワードを指定します。
+  # 複数指定したい時は,(コンマ)で区切るか、複数行指定してください。
+  keyword: hoge
+
+  # メッセージのフォーマットを指定します。
+  # デフォルト値: [tiarra][#(channel):#(nick.now)] #(text)
+  # #(channel) のかわりに #(raw_channel) を利用するとネットワーク名がつきません。
+  format: [tiarra][#(channel):#(nick.now)] #(text)
+
+  # 使用するブロックを指定します
+  #blocks: im prowl
+
+  im {
+
+    # 通知先のタイプを指定します。
+    type: im_kayac
+
+    # im.kayac.comで登録したユーザ名を入力します。
+    # im.kayac.comについては http://im.kayac.com/#docs を参考にしてください。
+    user: username
+
+    # im.kayac.comで秘密鍵認証を選択した場合は設定してください。
+    # 省略すると認証なしになります。
+    #secret: some secret
+
+    # im.kayac.comでパスワード認証を選択した場合は設定してください。
+    # 省略すると認証なしになります。
+    # secret と両方指定した場合は secret が優先されています。
+    #password: some password
+
+  }
+
+  prowl {
+
+    # 通知先のタイプを指定します。
+    type: prowl
+
+    # 通知先ごとにフォーマットを指定できます。
+    # この例では先頭に時刻を追加しています。
+    #format: #(date:%H:%M:%S) [#(channel):#(nick.now)] #(text)
+
+    # Prowl で表示された apikey を入力します。
+    # Prowl については http://prowl.weks.net/ を参考にしてください。
+    #apikey: XXXXXX
+
+    # http://forums.cocoaforge.com/viewtopic.php?f=45&t=20339
+    priority: 0
+    application: tiarra
+    event: keyword
+
+  }
 }
 
 - Auto::Oper {
