--- a/sample.conf
+++ b/sample.conf
@@ -53,7 +53,7 @@
 # -----------------------------------------------------------------------------
 general {
   # tiarra.conf自身の文字コード
-  # コード名はjis,sjis,euc,utf8,utf16,utf32等。(この値はUnicode::Japaneseにそのまま渡されます)
+  # コード名はjis,sjis,euc,utf8,utf16,utf32等。(この値はEncodeまたはUnicode::Japaneseにそのまま渡されます)
   # autoが指定された、または省略された場合は自動判別します。
   conf-encoding: utf8
 
@@ -98,13 +98,13 @@ general {
   # そのような場合にもこの機能は無効となる。
   #control-socket-name: test
 
-  # IRCサーバーから送られる文字のコードと、IRCサーバーへ送る文字のコード
-  # どちらも省略された場合はjis。
+  # IRCサーバーから送られる文字のコードと、IRCサーバーへ送る文字のコード。
+  # それぞれ省略された場合はjis。
   server-in-encoding: jis
   server-out-encoding: jis
 
-  # クライアントから受け取る文字のコードと、クライアントへ伝える文字のコード
-  # どちらも省略された場合はjis。
+  # クライアントから受け取る文字のコードと、クライアントへ伝える文字のコード。
+  # それぞれ省略された場合はjis。
   client-in-encoding: jis
   client-out-encoding: jis
 
@@ -133,7 +133,7 @@ general {
   #  mask: ++{example3}@ircnet,-+{example4}@2ch  +*!*@*.example.com # +で始まるチャンネル。
   #  mask: *                                     -*!*@*
   #-----------------
-  # となります。 この二つはまったく同じマスクを表しています。
+  # となります。この二つはまったく同じマスクを表しています。
 
   # この値をplumにすると、plum形式、省略するかtiarraを指定すると、Tiarra形式になります。
   chanmask-mode: tiarra
